--- a/privado/discos/tabladiscos.html
+++ b/privado/discos/tabladiscos.html
@@ -17,6 +17,7 @@
 
   <!-- Custom styles for this template -->
   <link href="css/sb-admin-2.min.css" rel="stylesheet">
+  <link href="css/custom.css" rel="stylesheet">
 
   <!-- Custom styles for this page -->
   <link href="vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
@@ -52,24 +53,24 @@
         <!-- Divider -->
         <hr class="sidebar-divider">
   
-        <!-- Heading -->
-        <div class="sidebar-heading">
-          Interface
+         <!-- Heading -->
+         <div class="sidebar-heading">
+          CRUD
         </div>
   
         <!-- Nav Item - Pages Collapse Menu -->
         <li class="nav-item">
-            <a class="nav-link" href="/privado/discos/tabladiscos.html">
-              <i class="fas fa-fw fa-table"></i>
-              <span>Tabla Discos</span></a>
-        </li>
-  
-        <!-- Nav Item - Utilities Collapse Menu -->
-        <li class="nav-item">
-            <a class="nav-link" href="privado/discos/formulario.html">
+          <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
             <i class="fas fa-compact-disc"></i>
-            <span>Crear Nuevo Disco</span>
+            <span>Discos</span>
           </a>
+          <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+            <div class="bg-white py-2 collapse-inner rounded">
+              <h6 class="collapse-header">Operaciones</h6>
+              <a class="collapse-item" href="privado/discos/tabladiscos.html">Listar</a>
+              <a class="collapse-item" href="privado/discos/formulario.html">Crear</a>
+            </div>
+          </div>
         </li>
   
         <!-- Divider -->
@@ -249,20 +250,24 @@
               <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
                 <a class="dropdown-item" href="#">
                   <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                  Profile
+                  Perfil
                 </a>
                 <a class="dropdown-item" href="#">
                   <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                  Settings
+                  Ajustes
                 </a>
                 <a class="dropdown-item" href="#">
                   <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
                   Activity Log
                 </a>
+                <a class="dropdown-item" href="index.html">
+                    <i class="fas fa-sign-in-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                    Iniciar sesion
+                </a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
                   <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                  Logout
+                  Cerrar sesion
                 </a>
               </div>
             </li>
@@ -273,67 +278,76 @@
         <!-- End of Topbar -->
 
         <!-- Begin Page Content -->
+        <!-- Begin Page Content -->
         <div class="container-fluid">
 
           <!-- Page Heading -->
-          <h1 class="h3 mb-2 text-gray-800">Tabla Discos</h1>
-          <p class="mb-4">En esta tabla se mostraran los discos :</p>
-            
-          <div class="container">
-            <table class="table table-dark">
-                <thead>
-                  <tr>
-                    <th scope="col">id</th>
-                    <th scope="col">Cover</th>
-                    <th scope="col">Titulo</th>
-                    <th scope="col">Grupo</th>
-                    <th scope="col">Fecha</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                    <td>@mdo</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">2</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                    <td>@mdo</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">3</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                    <td>@mdo</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">4</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                    <td>@mdo</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">5</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                    <td>@mdo</td>
-                  </tr>
-                </tbody>
-              </table>
-          
+          <h1 class="h3 mb-2 text-gray-800">Listado Discos</h1>
+          <p class="mb-4">En esta tabla estan todos los discos.</p>
+
+          <!-- DataTales Example -->
+          <div class="card shadow mb-4">
+            <div class="card-header py-3">
+              <h6 class="m-0 font-weight-bold text-primary">Listado Discos</h6>
+            </div>
+            <div class="card-body">
+              <div class="table-responsive">
+                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                  <thead>
+                    <tr>
+                      <th>id</th>
+                      <th>Cover</th>
+                      <th>Titulo</th>
+                      <th>Grupo</th>
+                      <th>Fecha</th>
+                    </tr>
+                  </thead>
+                  <tfoot>
+                    <tr>
+                      <th>id</th>
+                      <th>Cover</th>
+                      <th>Titulo</th>
+                      <th>Grupo</th>
+                      <th>Fecha</th>
+                    </tr>
+                  </tfoot>
+                  <tbody>
+                    <tr>
+                      <td>1</td>
+                      <td><img src="/img/SystemAlbum.jpg" alt="Imagen de disco" class="rounded-circle"> </td>
+                      <td>Sugar</td>
+                      <td>System of a dowm</td>
+                      <td>25/12/1998</td>
+                    </tr>
+                    <tr>
+                      <td>1</td>
+                      <td><img src="/img/SystemAlbum.jpg" alt="Imagen de disco" class="rounded-circle"> </td>
+                      <td>Sugar</td>
+                      <td>System of a dowm</td>
+                      <td>25/12/1998</td>
+                    </tr>
+                    <tr>
+                      <td>1</td>
+                      <td><img src="/img/SystemAlbum.jpg" alt="Imagen de disco" class="rounded-circle"> </td>
+                      <td>Sugar</td>
+                      <td>System of a dowm</td>
+                      <td>25/12/1998</td>
+                    </tr>
+                    <tr>
+                      <td>1</td>
+                      <td><img src="/img/SystemAlbum.jpg" alt="Imagen de disco" class="rounded-circle"> </td>
+                      <td>Sugar</td>
+                      <td>System of a dowm</td>
+                      <td>25/12/1998</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
 
         </div>
         <!-- /.container-fluid -->
-
-      </div>
       <!-- End of Main Content -->
 
       <!-- Footer -->
@@ -370,7 +384,7 @@
         <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
         <div class="modal-footer">
           <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-          <a class="btn btn-primary" href="login.html">Logout</a>
+          <a class="btn btn-primary" href="index.html">Logout</a>
         </div>
       </div>
     </div>
@@ -391,7 +405,7 @@
   <script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
   <!-- Page level custom scripts -->
-  <script src="js/demo/datatables-demo.js"></script>
+  <script src="js/datatables-custom.js"></script>
 
 </body>
 
