--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                     <div class="card o-hidden border-0 shadow-lg my-5">
                         <div class="card-body p-0"></div>
                             <!-- Nested Row within Card Body -->
-                            <div class="row">
-                                <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
-                                <div class="col-lg-6">
+                            <div class="row bg-warning">
+                                
+                                <div class="col-lg-6 container">
                                     <div class="p-5">
                                         <div class="text-center">
                                             <h1 class="h4 text-gray-900 mb-4">Login</h1>
@@ -82,7 +82,7 @@
                                                     <label class="custom-control-label" for="customCheck">Recuerdame</label>
                                                 </div>
                                             </div>
-                                            <button type="submit" class="btn btn-primary btn-user btn-block">
+                                            <button type="submit" class="btn btn-outline-primary btn-user btn-block">
                                                 Login
                                             </button>
                                             <hr>
